--- a/src/components/ServerTree.css
+++ b/src/components/ServerTree.css
@@ -16,8 +16,6 @@ ul {
 }
 
 .channel-button {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
     color: white;
     border: 0;
     height: 100%;
