--- a/src/components/util.css
+++ b/src/components/util.css
@@ -2,8 +2,6 @@
     background-color: transparent;
     color: white;
     height: 23px;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
     border: 1px solid white;
     width: 100%;
 }
@@ -17,8 +15,6 @@ a:visited {
 }
 
 .button {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
     background-color: transparent;
     border: 1px solid white;
     color: white;
