--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    font-family: "SF Pro Text","Helvetica Neue","Helvetica","Arial",sans-serif;
     background-color: #000000;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
